src/objects/vlocity_ins__RuleAction__c.object
<CustomObject>
    <description>Vlocity Rules drive actions to happen when the rule evaluates to true. Rule actions can define a configuration action, an availability action, an eligibility action, a pricing action or other actions.</description>
    <fields>
        <fullName>vlocity_ins__CalculationProcedureId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculation Procedure</label>
        <referenceTo>vlocity_ins__CalculationProcedure__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Filter</label>
        <referenceTo>vlocity_ins__EntityFilter__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OfferingProcedureId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Procedure</label>
        <referenceTo>vlocity_ins__OfferingProcedure__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductConfigurationProcedureId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration Procedure</label>
        <referenceTo>vlocity_ins__ProductConfigurationProcedure__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductConfigurationProcedureProductId__c</fullName>
        <formula>vlocity_ins__ProductConfigurationProcedureId__r.vlocity_ins__ProductId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductConfigurationProcedureProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Relationship</label>
        <referenceTo>vlocity_ins__ProductRelationship__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductRelationshipParentId__c</fullName>
        <formula>vlocity_ins__ProductRelationshipId__r.vlocity_ins__Product2Id__c</formula>
        <label>ProductRelationshipParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleId__c</fullName>
        <label>Rule</label>
        <referenceTo>vlocity_ins__Rule__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity Rule Action</label>
    <nameField>
        <displayFormat>RA-{00000000}</displayFormat>
        <label>Rule Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vlocity Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>